# smart-direct-agent-v3

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  railway.toml  requirements.in
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  shadow-cron.yml
.venv312/: pyvenv.cfg
agent_runtime/: brain.py  config.py  db.py  decision_engine.py  decision_journal.py  impact_tracker.py  main.py  models.py  pii.py  signal_detector.py  trust_levels.py
agent_runtime/auth/: __init__.py  signing.py
agent_runtime/jobs/: __init__.py  audience_sync.py  audit_retention.py  auto_resume.py  autotargeting_manager.py  bfl_rf_lead_poller.py  bfl_rf_watchdog.py  bitrix_feedback.py  budget_guard.py  form_checker.py  health_checker.py  impact_tracker_job.py  learner.py  offline_conversions.py  query_analyzer.py  regression_watch.py  shadow_monitor.py  smart_optimizer.py  strategic_advisor.py  strategy_gate.py  strategy_switcher.py  telegram_digest.py  watchdog.py
agent_runtime/knowledge/: __init__.py  api-gotchas.md  direct-knowledge-base.md  legal-compliance-wave1.md  minus-words-bfl.md  presnyakov-257.md
agent_runtime/tools/: __init__.py  _http.py  bfl_rf_tracker.py  bitrix.py  direct_api.py  kill_switches.py  metrika.py  registry.py  telegram.py
migrations/: 001_initial.sql  001_initial_rollback.sql
scripts/: check_tmp_sda_v2_imports.sh  check_verify_pairing.py  grill_audit.sh  smoke_test.sh
tests/: conftest.py
tests/integration/: test_audit_log_no_pii.py  test_direct_api.py  test_external_clients.py  test_kill_switches_e2e.py
tests/unit/: test_audience_sync.py  test_audit_retention.py  test_auth.py  test_auto_resume.py  test_autotargeting_manager.py  test_bfl_rf_tracker.py  (+46 more)
